Bug 320700 - QMake manager fails to create build directory if parent directory does not exist
Summary: QMake manager fails to create build directory if parent directory does not exist
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: QMake (other bugs)
Version First Reported In: 4.5.60
Platform: Other Linux
: NOR normal
Target Milestone: 5.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-06-04 09:31 UTC by Kevin Funk
Modified: 2015-12-02 20:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2013-06-04 09:31:04 UTC
Title says it all.

This is similar to bug 310594 (CMake manager).

Fix for that bug was:
https://projects.kde.org/projects/extragear/kdevelop/kdevelop/repository/revisions/b8e9d6a8b8dcd54a5556f760b47f5acfdb400212

Reproducible: Always
Comment 1 Kevin Funk 2015-11-28 14:52:57 UTC
Patch at: https://phabricator.kde.org/D613
Comment 2 Kevin Funk 2015-12-02 20:56:15 UTC
Git commit fa4b0a8c8978c16c313246aa081b2065362a75ec by Kevin Funk.
Committed on 02/12/2015 at 20:54.
Pushed by kfunk into branch '5.0'.

QMake: Fix configure, also configure when needed

Summary:
Changes:
- Create build directory if it doesn't exist yet
- When build dir does not exist:
  - Run qmake before build/install/clean
  - Run configure on import

Generally behaves a lot more like the CMake plugin now.
FIXED-IN: 5.0.0

Reviewers: mwolff

Reviewed By: mwolff

Subscribers: mwolff, kdevelop-devel

Projects: #kdevelop

Differential Revision: https://phabricator.kde.org/D613

M  +28   -3    projectbuilders/qmakebuilder/qmakebuilder.cpp
M  +10   -0    projectbuilders/qmakebuilder/qmakebuilder.h
M  +19   -2    projectbuilders/qmakebuilder/qmakejob.cpp
M  +1    -0    projectmanagers/qmake/CMakeLists.txt
M  +1    -1    projectmanagers/qmake/qmakeconfig.cpp
M  +4    -43   projectmanagers/qmake/qmakemanager.cpp
M  +0    -2    projectmanagers/qmake/qmakemanager.h
A  +82   -0    projectmanagers/qmake/qmakeutils.cpp     [License: GPL (v2/3)]
A  +47   -0    projectmanagers/qmake/qmakeutils.h     [License: GPL (v2/3)]
M  +7    -1    projectmanagers/qmake/tests/test_qmakeproject.cpp

http://commits.kde.org/kdevelop/fa4b0a8c8978c16c313246aa081b2065362a75ec