QMake: Fix configure, also configure when needed

Summary:
Changes:
- Create build directory if it doesn't exist yet
- When build dir does not exist:
  - Run qmake before build/install/clean
  - Run configure on import

Generally behaves a lot more like the CMake plugin now.

BUG: 320700
FIXED-IN: 5.0.0

Reviewers: mwolff

Reviewed By: mwolff

Subscribers: mwolff, kdevelop-devel

Projects: #kdevelop

Differential Revision: https://phabricator.kde.org/D613